// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MovieList component render component with props 1`] = `
<p
  className="class active"
>
  <span>
    children
  </span>
</p>
`;

exports[`render MovieList component render component without props 1`] = `
<p
  className="primary"
>
  <span>
    
  </span>
</p>
`;
